Document.txt
1. JDK vs JRE vs JVM
        JDK - Java Development Kit
        JRE - Java Runtime Environment
        JVM - Java Virtual Machine
 
        The machine won't understand the java code we wrote. It only understands bytecode and we can't write bytecode by ourselves so 
        whenever we compile the java sorce code it will be converting into bytecode.
        JVM creates a virtual execution Environment on top of Operating system, which makes Java as Platform independent. our java code 
        will be depending on some dependancies like inbuilt class or some files. and these files will be present inside JRE.
        JVM is part of JRE, so we can't use JVM without JRE. and both togather make JDK


2. Method Overwriting:
        Method overwriting exist to act differently while calling the method with different parameters.
        java allows to create multiple methods with same name, without throwing errors. but the methods should have different parameter.
        having the same parameter will end up in throwing the following error
    
            $ java Practice10.java 
            Practice10.java:5: error: method add(int,int) is already defined in class Calculator
                public int add(int a, int b){
                           ^
            1 error
            error: compilation failed 

3. Difference between '==' and .equals()
        == will perform address/reference comparision
        .equals() will perform content comparision.
        
        if we are creating two different objects and try to compare, we will get FALSE response, 
        == check whether two reference are pointing to same object.


4. Difference between Stack and Heap memeory
        Stack : Used to store quick variables, Primitive datatypes, object references, method calls, local variables.
        Heap : Used to store objects, Arrays, Instance variables, anything created with "new".

        Stack : Memory management is automatic, it is cleaned automatically.
        Heap : Garbage collector will clean the Heap memeory.

        Stack : Follows LIPO
        Heap : Priority based retrival


5. Arrays  
        Arrays are used to store multiple values of same datatypes in a single variable.
        
        Syntax: <datatype> <ArrayName>[] = {"value1","value2","value3",......,"valueN"};
                int marks[] = {97,93,47,56,73,98,60,89,83};
                String names[] = {"Mandy","Dumms","Appa","Amma","Tangi"};

        Use Practice14.java to see how to get all the values in array by using loops.

        we can access the values of an array by using their index numbers
                names[1];

6. variables
        Variable is a cup that holds something.
        Think of variables as cups of different type and sizes, like type Glass, Ceramic, Steel, Paper and Sizes like Small, Medium, Large.
        In the similar way, variable type String, int, boolean, double etc and sizes like 8,16,32 bits etc.

        As the analogy we used as cup for variable, if we fill more than its capacity, it will spill right(will throw an error : error: integer number too large).

7. Encapsulation
        Encapsulation is used to make sure sensetive data is hidden from the user.
                Declare the variable/attribute private.
                Provide public get and set method to access and update the private variable.

        If we try to access private variable/attributes without using getter and setters, we will get the following error.     
                error: <variable/attribute> has private access in Demo


8. Constructor
        Constructor is a special method.
        Constructor name should be same as class name.
        Constructor wont return anything.
        Constructor runs automatically whenever a new object is created.
        It is used to initialize an object.
        It sets initial values